# prime

./: README.md  pyproject.toml
src/prime/: __init__.py  example1.py  main.py
