[project]
name = "prime"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "m-tsuru", email = "147146974+m-tsuru@users.noreply.github.com" }
]
dependencies = [
    "sympy>=1.13.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/prime"]
